Restucturing of files

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/json2.js"></script>
 <script type="text/javascript" src="js/jquery.event.drag.js"></script>
-<!--<script type="text/javascript" src="js/kinetic2d-v1.0.5.js"></script>-->
 <script src="http://128.83.74.33:4000/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="scripts.js"></script>
-<link rel="stylesheet" href="style.css" />
+<script type="text/javascript" src="js/scripts.js"></script>
+<link rel="stylesheet" href="css/style.css" />
 
 <title>HTML5 Canvas + Node.JS Socket.io</title>
 </head>
