Adding config file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 
     <link rel="stylesheet" href="resource/touch/resources/css/sencha-touch.css" type="text/css">
     <link rel="stylesheet" href="resource/css/app.css" type="text/css">
+
+    <script type="text/javascript">
+      var appIpAddress = '{{ app_ip_address }}';
+      var appPort = '{{ app_port }}';
+    </script>
     
-    <!-- Replace with the nodejs server address -->
     <script type="text/javascript" src="resource/js/raphael-min.js"></script>
     <script type="text/javascript" src="resource/touch/sencha-touch-all-debug.js"></script>
     <script type="text/javascript" src="resource/js/jsxcompressor.js"></script>
