--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-    
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Canvas Touch</title>
-        <link rel="stylesheet" href="resource/touch/resources/css/sencha-touch.css"
-        type="text/css">
-        <link rel="stylesheet" href="resource/css/app.css" type="text/css">
-        <script type="text/javascript">
+	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Collabdraw</title>
+		<link rel="shortcut icon" href="assets/favicon.ico"/>
+		<!-- -->
+		<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+		<script type="text/javascript">
             var appIpAddress = '{{ app_ip_address }}';
-              var appPort = '{{ app_port }}';
+            var appPort = '{{ app_port }}';
         </script>
-        <script type="text/javascript" src="resource/js/raphael-min.js"></script>
-        <script type="text/javascript" src="resource/touch/sencha-touch-all-debug.js"></script>
-        <script type="text/javascript" src="resource/js/jsxcompressor.js"></script>
-        <script type="text/javascript" src="resource/js/app.js"></script>
-    </head>
-    
-    <body></body>
-
+		<script src="resource/enyo/enyo.js"></script>
+  	<script src="resource/js/raphael-min.js" type="text/javascript"></script>
+  	<script type="text/javascript" src="resource/js/jsxcompressor.js"></script>
+		<script src="resource/js/package.js" type="text/javascript"></script>
+		
+	</head>
+	<body class="enyo-unselectable">
+		<script>
+			var app = new App();
+			app.setAppIpAddress(appIpAddress);
+			app.setAppPort(appPort);
+			app.renderInto(document.body);
+		</script>
+	</body>
 </html>
