Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,10 +60,14 @@ git submodule update
 <ol>
 <li>Run the redis server</li>
 <li>Run "python main.py"</li>
+</ol><h2>NOTES:</h2>
+
+<ol>
+<li>All rooms are currently "public". Anyone registered user can join any room, if they know the room name. Private rooms on the way.</li>
 </ol><h2>KNOWN-ISSUES:</h2>
 
 <ol>
-<li>Doesn't work very well on android gingerbread browsers due to limited html5 support</li>
+<li>Doesn't work very well on Android Gingerbread browsers due to limited html5 support</li>
 </ol>
       </section>
     </div>
