Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ git submodule update
 
 <ol>
 <li>Doesn't work very well on Android Gingerbread browsers due to limited html5 support</li>
-</ol>
+</ol><h2>DEMO:</h2>
+
+<p><a href="http://collab.cloudapp.net/index.html">http://collab.cloudapp.net/index.html</a></p>
       </section>
     </div>
 
