Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <p>BollacBoard is an open-source online whiteboard application built to work on desktops and  tablets alike. The user interface is HTML5 (using enyojs), and the backend runs on python tornado and redis.</p>
 
+<p>What the hell is bollac? It's Collab spelt backwards. BollacBoard also kinda sounds like blackboard. So it's an awesome name.</p>
+
 <h2>SERVER REQUIREMENTS:</h2>
 
 <ol>
