Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="BollacBoard : HTML5 collaborative whiteboard for tablets" />
+    <meta name="description" content="Collabdraw : HTML5 collaborative whiteboard for tablets" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>BollacBoard</title>
+    <title>Collabdraw</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/anandtrex/bollacboard">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/anandtrex/collabdraw">View on GitHub</a>
 
-          <h1 id="project_title">BollacBoard</h1>
+          <h1 id="project_title">Collabdraw</h1>
           <h2 id="project_tagline">HTML5 collaborative whiteboard for tablets</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/anandtrex/bollacboard/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/anandtrex/bollacboard/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/anandtrex/collabdraw/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/anandtrex/collabdraw/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -33,9 +33,7 @@
       <section id="main_content" class="inner">
         <h2>ABOUT:</h2>
 
-<p>BollacBoard is an open-source online whiteboard application built to work on desktops and  tablets alike. The user interface is HTML5 (using enyojs), and the backend runs on python tornado and redis.</p>
-
-<p>What the hell is bollac? It's Collab spelt backwards. BollacBoard also kinda sounds like blackboard. So it's an awesome name.</p>
+<p>Collabdraw is an open-source online whiteboard application built to work on desktops and  tablets alike. The user interface is HTML5 (using enyojs), and the backend runs on python tornado and redis.</p>
 
 <h2>SERVER REQUIREMENTS:</h2>
 
@@ -52,7 +50,7 @@ non-python dependencies like cairo, redis)</li>
 <li>
 <p>Clone the git repository </p>
 
-<pre><code>git clone git://github.com/anandtrex/bollacboard.git
+<pre><code>git clone git://github.com/anandtrex/collabdraw.git
 </code></pre>
 </li>
 <li>
@@ -88,7 +86,7 @@ git submodule update
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">BollacBoard maintained by <a href="https://github.com/anandtrex">anandtrex</a></p>
+        <p class="copyright">Collabdraw maintained by <a href="https://github.com/anandtrex">anandtrex</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
