Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 
 <p>Collabdraw is an open-source online whiteboard application built to work on desktops and  tablets alike. The user interface is HTML5 (using enyojs), and the backend runs on python tornado and redis.</p>
 
-<h2>SERVER REQUIREMENTS:</h2>
+<h2>FEATURES:</h2>
+
+<ol>
+<li>Works on most tablets out of the box, interface designed for touch interfaces</li>
+<li>Multiple rooms, pages for collaboration</li>
+<li>Upload pdf and annotate on whiteboard</li>
+<li>Support for SSL, and authentication</li>
+<li>Fast, handles lots of users simultaneously</li>
+</ol><h2>SERVER REQUIREMENTS:</h2>
 
 <ol>
 <li>Python 3.2+</li>
