Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <ol>
 <li>Works on most tablets out of the box, interface designed for touch interfaces</li>
 <li>Multiple rooms, pages for collaboration</li>
+<li>Take quick snapshots of the board</li>
 <li>Upload pdf and annotate on whiteboard</li>
 <li>Support for SSL, and authentication</li>
 <li>Fast, handles lots of users simultaneously</li>
